--- a/files/index.html
+++ b/files/index.html
@@ -11,7 +11,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans,Noto+Sans+JP" rel="stylesheet">
 
   <base href="$WEBSITE_S3_PREFIX" />
 
