--- a/files/index.html
+++ b/files/index.html
@@ -15,6 +15,11 @@
 
   <base href="$WEBSITE_S3_PREFIX" />
 
+  <meta name=”description” content="Scooter rent company" />
+  <meta property=”og:title” content="Clover Company" />
+  <meta property=”og:description” content="Scooter rent company" />
+  <meta property=”og:url” content="http://clover-company.cc/" />
+  <meta property=”og:image” content="http://clover-company.cc/images/clover.png" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
