Added google meta tag

--- a/files/index.html
+++ b/files/index.html
@@ -20,6 +20,8 @@
   <meta property="og:description" content="Scooter rent company" />
   <meta property="og:url" content="http://clover-company.cc/" />
   <meta property="og:image" content="http://clover-company.cc/images/CloverLogo.png" />
+  <meta name="google-site-verification" content="LQEm53PXYAjC0dk1iWptg84UnqkfSO6je-cKARYlTIk" />
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
