Added social links

--- a/files/index.html
+++ b/files/index.html
@@ -33,10 +33,13 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Oswald|Noto+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
+
 
   <base href="$WEBSITE_S3_PREFIX" />
 
-  <meta name="description" content="Scooter rent company" />
+  <meta name="description" content="Clover Company is a scooter renting service" />
   <meta property="og:title" content="Clover Company" />
   <meta property="og:description" content="Scooter rent company" />
   <meta property="og:url" content="http://clover-company.cc/" />
